Fixed navmanu top gap, positioned indicator better

--- a/css/global.css
+++ b/css/global.css
@@ -11,7 +11,7 @@ body {
     padding-top: 12px;
     bottom: 0%;
     margin: 0;
-    font-size: 25px;
+    /* font-size: 25px; */
     color: #000;
     background: #fff;
     text-align: center;
