--- a/css/index.css
+++ b/css/index.css
@@ -102,7 +102,7 @@
     /* width: 100%; */
     position: fixed;
     left: 50%;
-    bottom: 12%;
+    bottom: 58px;
     transform: translate(-50%, -50%);
     text-align: center;
     list-style-type: none;
@@ -119,11 +119,11 @@
 }
 
 .indicators li div {
-    width: 15px;
-    height: 6px;
+    width: 18px;
+    height: 10px;
     /* position: absolute; */
-    border-radius: 3px;
-    box-shadow: 0px 0px 0px 4px rgba(255,255,255,0.4);
+    border-radius: 5px;
+    box-shadow: 0px 0px 0px 3px rgba(255,255,255,0.4);
     /* background-color: black; */
 }
 #slide_indicator1 {
